Fix for 1px button caption jump after changing to HTML5 doctype

--- a/WebContent/VAADIN/themes/base/button/button.scss
+++ b/WebContent/VAADIN/themes/base/button/button.scss
@@ -32,7 +32,7 @@
 
 .v-button-wrap,
 .v-button-caption {
-	vertical-align: middle;
+	vertical-align: baseline;
 	white-space: nowrap;
 	font: inherit;
 	color: inherit;
